fixed vertical align for tables

--- a/src/partials/_tables.sass
+++ b/src/partials/_tables.sass
@@ -49,6 +49,7 @@
         border-right: 1px solid $grey
         border-bottom: 1px solid $grey
         padding: .5rem .7rem
+        vertical-align: top
         
         ul
             margin: 0
